# SpaceVILSharp

./: .gitignore  LICENSE  README.md
BuildTool/: .project  build.gradle  conf.txt  fatJar.bat  icons.afphoto  settings.gradle
CSharp/SpaceVIL/: SpaceVIL.sln
CSharp_docOnly/Common/: DefaultsService.cs
CSharp_docOnly/Core/: Cell.cs  Geometry.cs  InputEventArgs.cs  SpaceVILException.cs
CSharp_docOnly/Decorations/: CornerRadius.cs  ItemState.cs  Style.cs
CSharp_docOnly/Engine/: GraphicsMathService.cs
CSharp_docOnly/Items/: Binder.cs  BlankItem.cs  ButtonCore.cs  CheckBox.cs  ComboBox.cs  ComboBoxDropDown.cs  ContextMenu.cs  CustomShape.cs  FloatItem.cs  FreeArea.cs  Grid.cs  HorizontalStack.cs  Indicator.cs  ListBox.cs  MenuBar.cs  PointsContainer.cs  ProgressBar.cs  SpinItem.cs  TreeView.cs  VerticalScrollBar.cs  VerticalSplitArea.cs  VerticalStack.cs
CSharp_docOnly/Layouts/: ItemsLayoutBox.cs
CSharp_docOnly/Windows/: ActiveWindow.cs  CoreWindow.cs  DropDown.cs  MessageBox.cs  WindowLayout.cs  WindowLayoutBox.cs
Doc/: Doxyfile  dotnetconfig  jvmconfig
Doc/java/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
Doc/style/: doxygen.css  html_footer.html  html_header.html  search.css  spacevil_style.css
Java/Fonts/: DrawEngine.java  FontEngine.java  ItemText.java  PixMapData.java  TextLabel.java
Java/GlfwWrapper/: .project  build.bat  clean.bat  settings.gradle
Java/GlfwWrapper/src/main/native/windows/: CMakeLists.txt  clean.bat  glfwwrapper.cpp
Java/OpenGLWrapper/: .project  build.bat  build.gradle  settings.gradle
Java/OpenGLWrapper/src/main/native/linux/: CMakeLists.txt  openglapi.cpp
Java/SpaceVIL/spacevil/src/main/native/linux/: CMakeLists.txt  build.sh  glfwwrapper.cpp  openglwrapper.cpp
Java/SpaceVIL/spacevil/src/main/native/macos/: CMakeLists.txt  build.sh  glfwwrapper.cpp  openglwrapper.cpp
Java/SpaceVIL/spacevil/src/main/native/windows/: CMakeLists.txt  common.h  glfwwrapper.cpp  openglwrapper.cpp
OwlsInSpace/: .project  build.gradle  history.cfg  settings.gradle
OwlsInSpace/workspace/: TestCase_1  TestCase_2  TestCase_3  TestCase_4  Untitled.txt
SpaceVIL/: SpaceVIL.csproj  compile-standard.bat  compile.sh  compile_win.bat  spacevil.xml
SpaceVIL/Common/: CommonService.cs  ContourService.cs  DefaultFont.cs  DefaultsService.cs  NativeLibrary.cs  RenderService.cs  SpaceVILConstants.cs
SpaceVIL/Core/: Area.cs  Cell.cs  EventManager.cs  Flags.cs  Geometry.cs  IDialogItem.cs  IEffect.cs  IHlayout.cs  IMovable.cs  IPoints.cs  IStateExtension.cs  ISubtractFigure.cs  ITextContainer.cs  ITextEditable.cs  ITextImage.cs  ITextShortcuts.cs  IWindowAnchor.cs  InputDeviceEvent.cs  Item.cs  KeyArgs.cs  PixMapData.cs  Position.cs  Scale.cs  ScrollValue.cs  Size.cs  TextInputArgs.cs  TextPrinter.cs
SpaceVIL/Decorations/: Border.cs  CornerRadius.cs  Effects.cs  Shadow.cs  Spacing.cs  Style.cs
SpaceVIL/Engine/: AbstractVramResource.cs  ActionManager.cs  CommonProcessor.cs  FontEngine.cs  GLWHandler.cs  GraphicsMathService.cs  ItemsRefreshManager.cs  KeyInputProcessor.cs  MouseMoveProcessor.cs  RenderProcessor.cs  Shader.cs  StencilProcessor.cs  TextInputProcessor.cs  VRAMStorage.cs  VRAMTexture.cs  VRAMVertex.cs  WindowManager.cs  WindowProcessor.cs
SpaceVIL/Glfw/: DataStructures.cs  Delegates.cs  Enums.cs  Glfw.Delegate.cs  Glfw.Enum.cs  Glfw.Func.cs  GlfwWrapper.cs
SpaceVIL/Items/: BaseItemStatics.cs  BlankItem.cs  ButtonCore.cs  ComboBox.cs  ComboBoxDropDown.cs  ContextMenu.cs  Ellipse.cs  (+38 more)
sandbox/: Program.cs  run-lin.sh  run-mac.sh  run-win.bat  runtimeconfig.template.json  sandbox.csproj
(+5043 files in other folders)
